# jarvis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: jarvis.default.yaml
docs/: projektkonzept.md
docs/plans/: 2026-03-31-macos-app-design.md  2026-03-31-macos-app-plan.md  2026-03-31-stt-orchestrator-design.md  2026-03-31-stt-orchestrator-plan.md  2026-04-01-app-bundle-design.md  2026-04-01-app-bundle-plan.md
scripts/: build_app.sh  create_icon.py  generate_icon.py  launcher.c
skills/general/: SKILL.md
skills/logiphys-ci/: SKILL.md
src/jarvis/: __init__.py  __main__.py  cli.py  config.py
src/jarvis/agent/: core.py  hooks.py  permissions.py  response.py
src/jarvis/pipeline/: __init__.py  base.py  feedback_guard.py  orchestrator.py
src/jarvis/pipeline/stt/: __init__.py  deepgram_stt.py  realtimestt.py
src/jarvis/pipeline/tts/: elevenlabs_tts.py  macos_say.py  piper.py
src/jarvis/pipeline/wake/: whisper_wake.py
src/jarvis/ui/: __init__.py  log_window.py  macos_app.py
src/jarvis/utils/: cost_tracker.py  keychain.py  logging.py  text_cleaner.py
tests/: test_base_interfaces.py  test_cli.py  test_config.py  test_keychain.py  test_model_cache.py  test_orchestrator.py  test_stt_engine.py
